# hrver

./: .gitignore  README.md  pyproject.toml
examples/api/: databases.py
hrver/: api.py  constants.py  features.py  utils.py
hrver/examples/test_app/: app.py  start.py  utils.py
models/: pca-12.model  random_forest.model  zscaler.model
src/hrver/: api.py  constants.py  features.py  utils.py
src/hrver/examples/api/: databases.py
src/hrver/examples/app/: app.py  tempCodeRunnerFile.py  test_data.txt
src/hrver/examples/app/test_data/: b001.atr  b001.hea
tests/: test.py  test_features.py
