[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hrver"
version = "0.0.1"
authors = [
  { name="Ivan Sergienko", email="err.ernest@mail.ru" },
]
description = "HRV features extraction and PhysioNet databases API for ECG HRV multiclass heart disease machine learning model implementation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/I-eerr-I/hrver"